search-proxy-test-http-delay-fault.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    last_promoted_version: 1-133-0
  name: search-proxy
  namespace: application
spec:
  gateways:
  - application-gateway
  - mesh
  hosts:
  - search-proxy.eksl-useast1.eks.eis-deliverydevqa.cloud
  - search-proxy
  http:
  - fault:
      delay:
        percentage:
          value: 100.0
        fixedDelay: 9s
    route:
    - destination:
        host: search-proxy
        subset: 1-133-0
  - route:
    - destination:
        host: search-proxy
        subset: 1-133-0
      weight: 100
